# HiVT

./: cuda_test.py  eval.py  utils.py
models/: global_interactor.py  hivt.py  local_encoder.py
mypyg/: conv.py  data.py  typing.py  utils.py
ops/: CMakeLists.txt  cuda_test.cc  flash_gat.cu  flash_gat_single.cu  gat.cu  gat.py  scatter_max.cu  ti_gat.py  tl_gat.py
